--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,10 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
+        <meta
+            http-equiv="Content-Security-Policy"
+            content="default-src https:; connect-src 'self' http://185.244.172.108:8081;"
+        />
         <title>Test project 7winds</title>
     </head>
     <body>
